# comsol2aero

./: .gitignore  CMakeLists.txt  README.md  license.txt
examples/: comsol_mesh.mphtxt  comsol_mesh2.mphtxt  comsol_mesh_tri.mphtxt  plate_with_hole.aero  plate_with_hole.mph  plate_with_hole.mphtxt  plate_with_hole2.mphtxt  selections.mph  selections.mphtxt
src/: aerofgenerator.cpp  aerofgenerator.hpp  aeromesh.hpp  aerosgenerator.cpp  aerosgenerator.hpp  charstreamer.hpp  cmdlineparse.cpp  cmdlineparse.hpp  comsolmesh.hpp  comsolparser.cpp  comsolparser.hpp  config.hpp  converter.cpp  converter.hpp  detecttty.cpp  detecttty.hpp  main.cpp  parsingerrorhandler.hpp  utils.hpp
